<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="bottom"
    android:orientation="vertical"
    android:padding="5dp"
    tools:context=".MyDialog">

    <LinearLayout
        android:id="@+id/linearlayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_weight="3.12"
        android:orientation="vertical">

        <Button
            android:id="@+id/calbtn1"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/call_contact_1"
            android:textColor="@color/button_text" />

        <Button
            android:id="@+id/calbtn2"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/call_contact_2"
            android:textColor="@color/button_text" />

        <Button
            android:id="@+id/calbtn3"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/call_contact_3"
            android:textColor="@color/button_text" />

        <Button
            android:id="@+id/calbtn4"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/call_contact_4"
            android:textColor="@color/button_text" />

        <Button
            android:id="@+id/calbtn5"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/call_contact_5"
            android:textColor="@color/button_text" />
    </LinearLayout>

</LinearLayout>
