<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".SelectContacts">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:weightSum="1">

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.36" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.03"
            android:textColor="@color/button_text"
            android:text="@string/enter_the_name_and_number"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/cname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@color/textbox"
            android:textColor="@color/button_text"
            android:hint="@string/enter_the_name" />

        <EditText
            android:id="@+id/cnumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@color/textbox"
            android:textColor="@color/button_text"
            android:ems="10"
            android:hint="@string/enter_the_number"
            android:inputType="number" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="38dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@color/textbox"
            android:textColor="@color/button_text"
            android:text="@string/or"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <Button
            android:id="@+id/SelectButton1"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@color/button"
            android:textColor="@color/button_text"
            android:text="@string/select_contact" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.26" />

        <Button
            android:id="@+id/del_contact"
            android:layout_width="265dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@color/button"
            android:textColor="@color/button_text"
            android:text="@string/delete_contact" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.02" />

        <Button
            android:id="@+id/savecontact"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/button"
            android:textColor="@color/button_text"
            android:text="@string/save_contact" />

    </LinearLayout>
</RelativeLayout>
