<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:theme="@android:style/Theme.DeviceDefault">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical"
        android:weightSum="1">


        <Switch
            android:id="@+id/switch1"
            android:layout_width="match_parent"
            android:textColor="@color/button_text"
            android:layout_height="wrap_content"
            android:layout_weight="0.29"
            android:checked="false"
            android:hint="Start or Stop ECaller"
            android:text="ECaller"
            android:textSize="40dp" />

        <Space
            android:layout_width="100dp"
            android:layout_height="100dp" />

        <Button
            android:id="@+id/SetContact"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.15"
            android:background="@color/button"
            android:textColor="@color/button_text"
            android:text="@string/set_contact" />

        <Button
            android:id="@+id/StartService"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.15"
            android:background="@color/button"
            android:text="@string/start_service"
            android:visibility="invisible" />

        <Space
            android:layout_width="10dp"
            android:layout_height="10dp" />

        <Button
            android:id="@+id/StopService"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.15"
            android:background="@color/button"
            android:textColor="@color/button_text"
            android:text="@string/stop_service"
            android:visibility="invisible" />

        <Space
            android:layout_width="10dp"
            android:layout_height="10dp" />
    </LinearLayout>

</RelativeLayout>
